--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <meta name="description" content="Thomas Morton - Campaigner">
   <meta name="author" content="Thomas Morton">
 
-  <link rel="stylesheet" href="http://www.tgmorton.com/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="./style.css">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -19,10 +17,10 @@
 <body>
     <div id="main">
         <div id="hero">
-            <img id="heroimage" style="width: 70%; height: auto; padding-left: 5%" src="http://www.tgmorton.com/Images/make_ncs_great.png">
+            <img id="heroimage" style="width: 70%; height: auto; padding-left: 5%" src="./Images/make_ncs_great.png">
         </div>
         <div id="nav">
-            <a href="About/index.html"> 
+            <a href="./About/index.html"> 
                 <div id="navlink1">
                     <div id="navtext">
                     <h1>About</h1>
