Expanded about page

--- a/About/index.html
+++ b/About/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div id="main">
+  <div id="main" style="background-image: url(../Images/background.png); background-repeat: repeat;">
     <div id="header">
       <img src="../Images/make_ncs_great_horizontal.png">
     </div>
