--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="author" content="Thomas Morton">
 
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" media="screen 
+    and (min-device-width : 375px)
+    and (max-device-width : 667px)" href="./mobile.css"
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
