Added files, consolidated, fixed minor formatting

--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
         <div id="nav">
             <a href="./About/index.html"> 
                 <div id="navlink1">
-                    <div id="navtext">
-                    <h1>About</h1>
+                    <div id="navtext1">
+                    <img id="navimg" src="Images/about.png">
                     </div>
                 </div>
             </a>
-            <a href="index.html">
+            <a href="./Contact/index.html">
                 <div id="navlink2">
-                    <div id="navtext">
-                    <h1>Contact</h1>
+                    <div id="navtext1">
+                    <img id="navimg2" src="Images/contact.png">
                     </div>
                 </div>
             </a>
-            <a href="index.html">
+            <a href="./Plans/index.html">
                 <div id="navlink3">
-                    <div id="navtext">
-                    <h1>Plans</h1>
+                    <div id="navtext1">
+                    <img id="navimg1" src="Images/plans.png">
                     </div>
                 </div>
             </a>
-            <a href="index.html">
+            <a href="./Media/index.html">
                 <div id="navlink4">
                     <div id="navtext">
-                    <h1>Media</h1>
+                    <img id="navimg" src="Images/media.png">
                     </div>
                 </div>
             </a>
