--- a/Plans/index.html
+++ b/Plans/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="About">
   <meta name="author" content="Thomas Morton">
 
-  <link rel="stylesheet" href="./about.css">
+  <link rel="stylesheet" href="./plans.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 
   <!--[if lt IE 9]>
@@ -19,13 +19,13 @@
 <body>
   <div id="main">
     <div id="header">
-        <a href="../index.html"><img id="header-image" src="../Images/make_ncs_great_horizontal.png"></a>
+        <a href="../About/index.html"><img id="header-image" src="../Images/make_ncs_great_horizontal.png"></a>
     </div>
     <div id="nav">
         <a href="./index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
-        </div></a><a href="../Contact/index.html"><div id="navlink2"><img id="imglinkc" src="../Images/contact.png">
+        </div></a><a href="../Contact/index.html"><div id="navlink2"><img id="imglink" src="../Images/contact.png">
         </div></a><a href="../Plans/index.html"><div id="navlink3"><img id="imglink" src="../Images/plans.png">
-        </div></a><a href="media"><div id="navlink4"><img id="imglink" src="../Images/media.png"></div></a>
+        </div></a><a href="../Media/index.html"><div id="navlink4"><img id="imglink" src="../Images/media.png"></div></a>
     </div>
     <div id="content">
         <div id="text">
