--- a/Plans/index.html
+++ b/Plans/index.html
@@ -23,7 +23,7 @@
     </div>
     <div id="nav">
         <a href="./index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
-        </div></a><a href="../Contact/index.html"><div id="navlink2"><img id="imglink" src="../Images/contact.png">
+        </div></a><a href="../Contact/index.html"><div id="navlink2"><img id="imglinkc" src="../Images/contact.png">
         </div></a><a href="../Plans/index.html"><div id="navlink3"><img id="imglink" src="../Images/plans.png">
         </div></a><a href="../Media/index.html"><div id="navlink4"><img id="imglink" src="../Images/media.png"></div></a>
     </div>
