Completed contact and plans page

--- a/Plans/index.html
+++ b/Plans/index.html
@@ -29,18 +29,52 @@
     </div>
     <div id="content">
         <div id="text">
-            <h2>The People Must Lead!</h2>
-            <p>Are you tired of not knowing what your Representatives are doing? Are you done with having your ideas pushed to the side? What if there was another way? Thomas Morton wants to make that path for you. He fights for the student's voice, he wants to hear the unheard. Vote Thomas Morton for Student-Body President!</p>
-            <p>Thomas Morton has the vision and the resources to make next year your best. He promises to make communication easy and equal. Instead of skipping your lunches for meetings that won't make a difference, Thomas Morton will come to you, and giving suggestions will have never been easier. You can know that your ideas have been heard.</p>
-            <p>You don't have to blindly trust your representative, Thomas Morton will give you a reason. Complete transparency is his goal. He wants every meeting, every idea, every financial decision to be easily available for ALL students. You don't need to wonder where your money is going, because he'll show you. You don't need to worry your idea will never be heard, because everyone can vote on each other's ideas. You don't need to worry about finding time for another meeting, because online discussion is the new alternative. Of course, the old ways will still be here, but variety is essential.</p>
-            <p>Communication between the representatives and the student-body is essential, and he will ensure that each class is able to easily communicate with their own representatives. He also will ensure that there will be easy access to news, dates, and location.</p>
-            <p>If you want some more information on his campaign promises go to the <a href="../Plans/index.html">Plans page.</a></p>
+            <h2>I've got big plans for you!</h2>
+            <p>Thomas Morton isn't just ambitious, but he has the skillset to justify it. Take a look at the next year if you vote for Thomas:</p>
+            <p>You can press the following links to jump to different parts of the page:
+            <br><a href="#communication">Communication</a>
+            <br><a href="#transparency">Transparency</a>
+            <br><a href="#yourvoice">Your Voice</a>
+            <br><a href="#resources">Resources</a>
+            <br><a href="#schoolevents">School Events</a>
             
+            </p>
+            <h3 id="communication">Communication</h3>
+            <ul>
+                <li>Consistent and easily accessible newsletters.</li>
+                <li>A Leadership Council blog - frequently updated and detailing the newest plans for the school.</li>
+                <li>Emails, when neccessary, will be concise and infrequent, unless the studen-body requests otherwise. </li>
+                <li>We will make it easily accessible as to when we are working and when we need help. We can't do this alone, but no one is entitled to help us.</li>
+                <h4>Direct Representative-Student Communication</h4>
+                <li>Frequent non-mandatory meetings available to all students, and incorporating all topics as well as general discussion. Feel free to come and pitch any idea; We will take the ideas presented, give them to the students, and allow you to pick.</li>
+                <li>The Leadership Council will provide a safe, moderated discussion and forum system available to ALL students. This eliminates the need for taking up your time, when you can easily discuss ideas in a community center.</li>
+                <li>Easy communication with your representatives: feel free to text them, a chat system will be developed, and email is always open.</li>
+            </ul>
+            <p>We want to utilize every method we can to create a clear, concise, and collaborative year. A vote for Thomas means no more doubt, no more confusion on what your representatives are doing. You will know our every goal, our every move, and this all coordinates with our other plans: transparency, idea equality, and resource management. (And be sure to check out the homecoming section further, Thomas Morton has some specific ideas on that.)</p>
+            <h3 id="transparency">Transparency</h3>
+            <ul>
+                <li>Meetings will be recorded and transcripted for viewing and reference.</li>
+                <li>Polling and voting data will be stripped of all personal data and anonymized, it will then be released to the general public. This is to ensure that all decisions are purely fair and decided only on the will of the student body, not the representatives. </li>
+                <li>Goals and ideas will be itemized, prioritized, and presented to the student-body. We will keep everyone updated on the progress of these goals, as well as the paths we are taking to complete them.</li>
+                <h4>Complete Financial Transparency</h4>
+                <li>All financial decisions made by the Leadership Council will be itemized and presented to the public. This includes the money that we have made from fundraising, sales, and donations.</li>
+                <li>Fundraising will become more student driven, we will encourage and coordinate all grades to create social events that everyone will enjoy. We will work with you to create events that you will enjoy. If we are going to ask for money, we want you to have a reason. </li>
+                <li>If you spend money on Leadership Council sponsered event, the individual impact you've had on our efforts will be represented in a such a way that you can be proud of your spending.</li>
+                <h4>Transparent Responsibility</h4>
+                <li>We plan to be completely open with our shortcomings and failures, aiming to fix them. Thomas Morton knows that it's easy to become blind of issues when you're working in other directions. While we rely on the student-body for everything, it is most of all in that.</li>
+            </ul>
+            <p>Transparency is extremely important to Thomas Morton, just as it should be to all the Leadership Council, but you can be assured that with Thomas Morton as President he will insure that these standards be followed.</p>
+            <h3>Your Voice</h3>
+            <ul>
+                <li>The leadership council will provide an idea aggregation center. A place where anyone can submit an idea, and anyone can comment and vote on said ideas.</li>
+                <li>This coincides with communication, where proper discussion forums will allow the student body to develop their own ideas and create a greater overall experience for the year.</li>
+                <h4>Your Opinions Matter</h4>
+                <li>The Leadership council will be open to any sort of criticism, and will be actively seeking and acknowledging it. </li>
+                <li>Whenver the option to be collaborative is availble, we will take that option. For example, Thomas Morton will push for collabortive song lists. Taking the songs that you suggest, running them through the proper channels, and making sure that the students are given the chance to choose, he will push this for homecoming, and help integrate it with prom when available.</li>
+            </ul>
         </div>
     </div>
-    <div id="footer">
-        <h3>Website Created by Thomas Morton | Code Saved <a href="http://github.com/hendenburg/CampaignWebsite">HERE</a> According to the AGPL</h3>
-    </div>
+
   </div>
 </body>
 </html>
