--- a/Contact/index.html
+++ b/Contact/index.html
@@ -29,13 +29,17 @@
     </div>
     <div id="content">
         <div id="text">
-            <h2>The People Must Lead!</h2>
-            <p>Are you tired of not knowing what your Representatives are doing? Are you done with having your ideas pushed to the side? What if there was another way? Thomas Morton wants to make that path for you. He fights for the student's voice, he wants to hear the unheard. Vote Thomas Morton for Student-Body President!</p>
-            <p>Thomas Morton has the vision and the resources to make next year your best. He promises to make communication easy and equal. Instead of skipping your lunches for meetings that won't make a difference, Thomas Morton will come to you, and giving suggestions will have never been easier. You can know that your ideas have been heard.</p>
-            <p>You don't have to blindly trust your representative, Thomas Morton will give you a reason. Complete transparency is his goal. He wants every meeting, every idea, every financial decision to be easily available for ALL students. You don't need to wonder where your money is going, because he'll show you. You don't need to worry your idea will never be heard, because everyone can vote on each other's ideas. You don't need to worry about finding time for another meeting, because online discussion is the new alternative. Of course, the old ways will still be here, but variety is essential.</p>
-            <p>Communication between the representatives and the student-body is essential, and he will ensure that each class is able to easily communicate with their own representatives. He also will ensure that there will be easy access to news, dates, and location.</p>
-            <p>If you want some more information on his campaign promises go to the <a href="../Plans/index.html">Plans page.</a></p>
-            
+            <h2>Contact Me!</h2>
+            <p>I'm available by email at all times of the day at both:<br>
+            <a href="mailto:thomas.morton@northlakechristian.org">Thomas.morton@northlakechristian.org</a>
+            and <br>
+            <a href="mailto:thomasmorton88@gmail.com">Thomasmortong@gmail.com</a>
+            </p>
+            <p>If you ever have any questions or want to talk, my number is: <br>
+            <a href="tel:+1-504-343-7951">(504) 343-7951</a>
+            </p>
+            <p>If you wish, you can fill out the contact form below:<br>
+            <a href="https://goo.gl/forms/3hZw1a0eOGTQlTdj2">Here</a></p>
         </div>
     </div>
     <div id="footer">
