--- a/Plans/index.html
+++ b/Plans/index.html
@@ -22,7 +22,7 @@
         <a href="../About/index.html"><img id="header-image" src="../Images/make_ncs_great_horizontal.png"></a>
     </div>
     <div id="nav">
-        <a href="./index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
+        <a href="../About/index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
         </div></a><a href="../Contact/index.html"><div id="navlink2"><img id="imglinkc" src="../Images/contact.png">
         </div></a><a href="../Plans/index.html"><div id="navlink3"><img id="imglink" src="../Images/plans.png">
         </div></a><a href="../Media/index.html"><div id="navlink4"><img id="imglink" src="../Images/media.png"></div></a>
