added to more plans, fixed nav

--- a/Plans/index.html
+++ b/Plans/index.html
@@ -51,6 +51,7 @@
                 <li>Easy communication with your representatives: feel free to text them, a chat system will be developed, and email is always open.</li>
             </ul>
             <p>We want to utilize every method we can to create a clear, concise, and collaborative year. A vote for Thomas means no more doubt, no more confusion on what your representatives are doing. You will know our every goal, our every move, and this all coordinates with our other plans: transparency, idea equality, and resource management. (And be sure to check out the homecoming section further, Thomas Morton has some specific ideas on that.)</p>
+            <hr>
             <h3 id="transparency">Transparency</h3>
             <ul>
                 <li>Meetings will be recorded and transcripted for viewing and reference.</li>
@@ -64,13 +65,32 @@
                 <li>We plan to be completely open with our shortcomings and failures, aiming to fix them. Thomas Morton knows that it's easy to become blind of issues when you're working in other directions. While we rely on the student-body for everything, it is most of all in that.</li>
             </ul>
             <p>Transparency is extremely important to Thomas Morton, just as it should be to all the Leadership Council, but you can be assured that with Thomas Morton as President he will insure that these standards be followed.</p>
-            <h3>Your Voice</h3>
+            <hr>
+            <h3 id="yourvoice">Your Voice</h3>
             <ul>
                 <li>The leadership council will provide an idea aggregation center. A place where anyone can submit an idea, and anyone can comment and vote on said ideas.</li>
                 <li>This coincides with communication, where proper discussion forums will allow the student body to develop their own ideas and create a greater overall experience for the year.</li>
                 <h4>Your Opinions Matter</h4>
                 <li>The Leadership council will be open to any sort of criticism, and will be actively seeking and acknowledging it. </li>
                 <li>Whenver the option to be collaborative is availble, we will take that option. For example, Thomas Morton will push for collabortive song lists. Taking the songs that you suggest, running them through the proper channels, and making sure that the students are given the chance to choose, he will push this for homecoming, and help integrate it with prom when available.</li>
+                <li>Monthly polls assessing the state of the school. The results will be anonymized and released, then adressed by the leadership council. Issues will be addressed and itemized.</li>
+                <li>Quarterly meetings within bible classes for discussion. (This is the least likely on the list, but Thomas Morton will still collaborate with Bible teachers in reaching this goal.)</li>
+            </ul>
+            <p>Obviously, your voice is the most important part of the school and Leadership Council. Without the opinions of the student body, the representation are running blind. Your voice also matters in the events that the Leadership Council hosts. We want your direct involvement in choosing these events, while it will be our job to make it a reality.</p>
+            <hr>
+            <h3 id="schoolevents">School Events</h3>
+            <ul>
+                <li>Integration with idea aggregation to create the best events for all of the year</li>
+                <li>Utilizing resources from throughout the school and from various students to reduce cost</li>
+                <h4>Homecoming</h4>
+                <li>Create financial milestones towards goals that would make homecoming amazing</li>
+                <li>Show the individual impact of each ticket purchased. </li>
+                <h5>Milestone System</h5>
+                <li>Starting with small, achievable goals, creating3 incentive to buy tickets to homecoming.</li>
+                <li>Every single aspect of homecoming will be listed through this system, although larger milestones will have more focu on them. This means you will always know what going to happen at an upcoming dance.</li>
+                <li>Students will help choose the fundraising events to raise money.</li>
+                <li>The Milestone System will give meaning to your purchase, you can see how your money affects the dance itself.</li>
+                <li>Thomas Morton will work towards the ultimate goals at homecoming. Determining what the student body wants and making it a reality. Initially, the final milestone goal will be a live band, but that is subject to change.</li>
             </ul>
         </div>
     </div>
