--- a/Media/index.html
+++ b/Media/index.html
@@ -10,6 +10,10 @@
 
   <link rel="stylesheet" href="./media.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+      <link rel="stylesheet" media="screen 
+    and (min-device-width : 768px)
+    and (max-device-width : 1024px)
+    and (orientation: landscape)" href="../ipad.css"
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -22,7 +26,7 @@
         <a href="../About/index.html"><img id="header-image" src="../Images/make_ncs_great_horizontal.png"></a>
     </div>
     <div id="nav">
-        <a href="./index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
+        <a href="../About/index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
         </div></a><a href="../Contact/index.html"><div id="navlink2"><img id="imglinkc" src="../Images/contact.png">
         </div></a><a href="../Plans/index.html"><div id="navlink3"><img id="imglink" src="../Images/plans.png">
         </div></a><a href="../Media/index.html"><div id="navlink4"><img id="imglink" src="../Images/media.png"></div></a>
