--- a/Plans/index.html
+++ b/Plans/index.html
@@ -10,6 +10,10 @@
 
   <link rel="stylesheet" href="./plans.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+      <link rel="stylesheet" media="screen 
+    and (min-device-width : 768px)
+    and (max-device-width : 1024px)
+    and (orientation: landscape)" href="../ipad.css"
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
