--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
             <a href="./Contact/index.html">
                 <div id="navlink2">
                     <div id="navtext1">
-                    <img id="navimg2" src="Images/contact.png">
+                    <img id="navimg1" src="Images/contact.png">
                     </div>
                 </div>
             </a>
             <a href="./Plans/index.html">
                 <div id="navlink3">
                     <div id="navtext1">
-                    <img id="navimg1" src="Images/plans.png">
+                    <img id="navimg2" src="Images/plans.png">
                     </div>
                 </div>
             </a>
             <a href="./Media/index.html">
                 <div id="navlink4">
                     <div id="navtext">
-                    <img id="navimg" src="Images/media.png">
+                    <img id="navimg3" src="Images/media.png">
                     </div>
                 </div>
             </a>
