--- a/Plans/index.html
+++ b/Plans/index.html
@@ -23,7 +23,7 @@
 <body>
   <div id="main">
     <div id="header">
-        <a href="../About/index.html"><img id="header-image" src="../Images/make_ncs_great_horizontal.png"></a>
+        <a href="../index.html"><img id="header-image" src="../Images/make_ncs_great_horizontal.png"></a>
     </div>
     <div id="nav">
         <a href="../About/index.html"><div id="navlink1"><img id="imglink" src="../Images/about.png">
