fixed formatting and grammar issues

--- a/Plans/index.html
+++ b/Plans/index.html
@@ -47,40 +47,40 @@
             <ul>
                 <li>Consistent and easily accessible newsletters.</li>
                 <li>A Leadership Council blog - frequently updated and detailing the newest plans for the school.</li>
-                <li>Emails, when neccessary, will be concise and infrequent, unless the studen-body requests otherwise. </li>
+                <li>Emails, when neccessary, will be concise and infrequent, unless the student-body requests otherwise. </li>
                 <li>We will make it easily accessible as to when we are working and when we need help. We can't do this alone, but no one is entitled to help us.</li>
                 <h4>Direct Representative-Student Communication</h4>
-                <li>Frequent non-mandatory meetings available to all students, and incorporating all topics as well as general discussion. Feel free to come and pitch any idea; We will take the ideas presented, give them to the students, and allow you to pick.</li>
+                <li>Frequent non-mandatory meetings available to all students, and incorporating all topics as well as general discussion. Feel free to come and pitch any idea; we will take the ideas presented, give them to the students, and allow you to pick.</li>
                 <li>The Leadership Council will provide a safe, moderated discussion and forum system available to ALL students. This eliminates the need for taking up your time, when you can easily discuss ideas in a community center.</li>
                 <li>Easy communication with your representatives: feel free to text them, a chat system will be developed, and email is always open.</li>
             </ul>
-            <p>We want to utilize every method we can to create a clear, concise, and collaborative year. A vote for Thomas means no more doubt, no more confusion on what your representatives are doing. You will know our every goal, our every move, and this all coordinates with our other plans: transparency, idea equality, and resource management. (And be sure to check out the homecoming section further, Thomas Morton has some specific ideas on that.)</p>
+            <p>We want to utilize every method we can to create a clear, concise, and collaborative year. A vote for Thomas means no more doubt, and no more confusion on what your representatives are doing. You will know our every goal, our every move, and this will be coordinated with our other plans: transparency, idea equality, and resource management. (And be sure to check out the homecoming section further; Thomas Morton has some specific ideas on that.)</p>
             <hr>
             <h3 id="transparency">Transparency</h3>
             <ul>
                 <li>Meetings will be recorded and transcripted for viewing and reference.</li>
-                <li>Polling and voting data will be stripped of all personal data and anonymized, it will then be released to the general public. This is to ensure that all decisions are purely fair and decided only on the will of the student body, not the representatives. </li>
+                <li>Polling and voting information will be stripped of all personal data and anonymized, it will then be released to the general public. This is to ensure that all decisions are purely fair and decided only on the will of the student body, not the representatives. </li>
                 <li>Goals and ideas will be itemized, prioritized, and presented to the student-body. We will keep everyone updated on the progress of these goals, as well as the paths we are taking to complete them.</li>
                 <h4>Complete Financial Transparency</h4>
                 <li>All financial decisions made by the Leadership Council will be itemized and presented to the public. This includes the money that we have made from fundraising, sales, and donations.</li>
-                <li>Fundraising will become more student driven, we will encourage and coordinate all grades to create social events that everyone will enjoy. We will work with you to create events that you will enjoy. If we are going to ask for money, we want you to have a reason. </li>
+                <li>Fundraising will become more student driven, and we will encourage and coordinate all grades to create social events that everyone will enjoy. We will work with you to create events that you will enjoy. If we are going to ask for money, we want you to have a reason. </li>
                 <li>If you spend money on Leadership Council sponsered event, the individual impact you've had on our efforts will be represented in a such a way that you can be proud of your spending.</li>
                 <h4>Transparent Responsibility</h4>
-                <li>We plan to be completely open with our shortcomings and failures, aiming to fix them. Thomas Morton knows that it's easy to become blind of issues when you're working in other directions. While we rely on the student-body for everything, it is most of all in that.</li>
+                <li>We plan to be completely open with our shortcomings and failures and aiming to fix them. Thomas Morton knows that it's easy to become blind of issues when you're working in other directions. While we rely on the student-body for everything, it is most of all in that.</li>
             </ul>
-            <p>Transparency is extremely important to Thomas Morton, just as it should be to all the Leadership Council, but you can be assured that with Thomas Morton as President he will insure that these standards be followed.</p>
+            <p>Transparency is extremely important to Thomas Morton, just as it should be to all the Leadership Council, but you can be assured that with Thomas Morton as President he will ensure that these standards be followed.</p>
             <hr>
             <h3 id="yourvoice">Your Voice</h3>
             <ul>
-                <li>The leadership council will provide an idea aggregation center. A place where anyone can submit an idea, and anyone can comment and vote on said ideas.</li>
+                <li>The leadership council will provide an idea aggregation center: a place where anyone can submit an idea, and anyone can comment and vote on said ideas.</li>
                 <li>This coincides with communication, where proper discussion forums will allow the student body to develop their own ideas and create a greater overall experience for the year.</li>
                 <h4>Your Opinions Matter</h4>
                 <li>The Leadership council will be open to any sort of criticism, and will be actively seeking and acknowledging it. </li>
-                <li>Whenver the option to be collaborative is availble, we will take that option. For example, Thomas Morton will push for collabortive song lists. Taking the songs that you suggest, running them through the proper channels, and making sure that the students are given the chance to choose, he will push this for homecoming, and help integrate it with prom when available.</li>
+                <li>Whenever the option to be collaborative is available, we will take that option. For example, Thomas Morton will push for collaborative song lists. Taking the songs that you suggest, running them through the proper channels, and making sure that the students are given the chance to choose, he will push this for homecoming, and help integrate it with prom when available.</li>
                 <li>Monthly polls assessing the state of the school. The results will be anonymized and released, then adressed by the leadership council. Issues will be addressed and itemized.</li>
-                <li>Quarterly meetings within bible classes for discussion. (This is the least likely on the list, but Thomas Morton will still collaborate with Bible teachers in reaching this goal.)</li>
+                <li>Quarterly meetings within Bible classes for discussion. (This is the least likely on the list, but Thomas Morton will still collaborate with Bible teachers in reaching this goal.)</li>
             </ul>
-            <p>Obviously, your voice is the most important part of the school and Leadership Council. Without the opinions of the student body, the representation are running blind. Your voice also matters in the events that the Leadership Council hosts. We want your direct involvement in choosing these events, while it will be our job to make it a reality.</p>
+            <p>Obviously, your voice is the most important part of the school and Leadership Council. Without the opinions of the student body, the representation is running blind. Your voice also matters in the events that the Leadership Council hosts. We want your direct involvement in choosing these events, while it will be our job to make it a reality.</p>
             <hr>
             <h3 id="schoolevents">School Events</h3>
             <ul>
@@ -90,11 +90,11 @@
                 <li>Create financial milestones towards goals that would make homecoming amazing</li>
                 <li>Show the individual impact of each ticket purchased. </li>
                 <h5>Milestone System</h5>
-                <li>Starting with small, achievable goals, creating3 incentive to buy tickets to homecoming.</li>
-                <li>Every single aspect of homecoming will be listed through this system, although larger milestones will have more focu on them. This means you will always know what going to happen at an upcoming dance.</li>
+                <li>Starting with small, achievable goals, creating incentive to buy tickets to homecoming.</li>
+                <li>Every single aspect of homecoming will be listed through this system, although larger milestones will have more focus on them. This means you will always know what going to happen at an upcoming dance.</li>
                 <li>Students will help choose the fundraising events to raise money.</li>
                 <li>The Milestone System will give meaning to your purchase, you can see how your money affects the dance itself.</li>
-                <li>Thomas Morton will work towards the ultimate goals at homecoming. Determining what the student body wants and making it a reality. Initially, the final milestone goal will be a live band, but that is subject to change.</li>
+                <li>Thomas Morton will work towards the ultimate goals at homecoming: Determining what the student body wants and making it a reality. Initially, the final milestone goal will be a live band, but that is subject to change.</li>
             </ul>
         </div>
     </div>
