--- a/About/index.html
+++ b/About/index.html
@@ -13,7 +13,10 @@
   <link rel="stylesheet" media="screen 
     and (min-device-width : 768px)
     and (max-device-width : 1024px)
-    and (orientation: landscape)" href="../ipad.css"
+    and (orientation: landscape)" href="../ipad.css">
+    <link rel="stylesheet" media="screen 
+    and (min-device-width : 375px)
+    and (max-device-width : 667px)" href="../mobiletext.css">
     
 
   <!--[if lt IE 9]>
